--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start-react": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "server": "nodemon src/api/index.js",
-    "dev": "concurrently \"npm run server\" \"npm run start\""
+    "start": "concurrently \"npm run server\" \"npm run start-react\""
   },
   "eslintConfig": {
     "extends": [
