--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "server": "nodemon src/api/index.js",
-    "start": "concurrently \"npm run server\" \"npm run start-react\""
+    "start": "npm run server"
   },
   "eslintConfig": {
     "extends": [
